--- a/sub/Treasure_Road_in_Jeju/scss/Treasure_Road_in_Jeju.scss
+++ b/sub/Treasure_Road_in_Jeju/scss/Treasure_Road_in_Jeju.scss
@@ -95,6 +95,10 @@ body {
                     width: 30px;
                     margin-right: 20px;
 
+                    &:hover {
+                        opacity: 0.3;
+                    }
+
                     @include responsive(tablet-size) {
                         width: 35px;
                         margin-right: 40px;
